@@ -1,6 +1,4 @@
 class Sys {
-  native static method is_D_WIN32 : int ();
-
   native static method defined : int ($macro_name : string, $value = undef : object of Int|Long|Double);
 
   native static method getenv : string ($name : string);
